Update vocabularies and delete legacy dialect.

--- a/vocabulary/src/main/resources/vocabularies/core.yaml
+++ b/vocabulary/src/main/resources/vocabularies/core.yaml
@@ -32,6 +32,10 @@ propertyTerms:
     displayName: email
     description: Contact email for the organization
     range: string
+  extensionName:
+    displayName: name
+    description: Name of an entity
+    range: string
   license:
     displayName: license
     description: License for the API
