Update vocabularies and typings.

--- a/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
+++ b/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
@@ -161,6 +161,10 @@ propertyTerms:
     displayName: references
     description: references across base units
     range: Unit
+  root:
+    displayName: root
+    description: Indicates if the base unit represents the root of the document model obtained from parsing
+    range: boolean
   strict:
     displayName: strict
     description: Indicates if this example should be validated against an associated schema
