--- a/vocabulary/src/main/resources/vocabularies/data_shapes.yaml
+++ b/vocabulary/src/main/resources/vocabularies/data_shapes.yaml
@@ -69,14 +69,17 @@ classTerms:
     displayName: XML Serializer
     description: Information about how to encode into XML a particular data shape
 propertyTerms:
-  additionalItems:
-    displayName: additional items
-    description: Constraint allowing additional shapes in the collection
-    range: boolean
+  additionalItemsSchema:
+    displayName: additional items schema
+    range: shacl.Shape
   anyOf:
     displayName: any of
     description: Data shapes in the union
     range: shacl.Shape
+  closedItems:
+    displayName: closed items
+    description: Constraint limiting additional shapes in the collection
+    range: boolean
   closure:
     displayName: inheritance closure
     description: Transitive closure of data shapes this particular shape inherits structure from
@@ -85,10 +88,18 @@ propertyTerms:
     displayName: collection format
     description: Input collection format information
     range: string
+  contains:
+    displayName: contains
+    description: One of the shapes in the data arrangement
+    range: shacl.Shape
   dependencies:
     displayName: dependencies
     description: Dependent properties constraint
     range: PropertyDependencies
+  deprecated:
+    displayName: deprecated
+    description: Deprecated annotation for a property constraint
+    range: boolean
   discriminator:
     displayName: discriminator
     description: Discriminator property
@@ -160,6 +171,10 @@ propertyTerms:
   uniqueItems:
     displayName: uinque items
     description: Unique items constraint
+    range: boolean
+  writeOnly:
+    displayName: write only
+    description: Write only property constraint
     range: boolean
   xmlAttribute:
     displayName: xml attribute
